2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* tests/Makefile.am:
	* tests/wrapset.api:
	* tests/wrapset.scm: Add API regression test suite.

2007-11-08  Andy Wingo  <wingo@pobox.com>

	* Makefile.am:
	* doc/: Add documentation, generated from upstream gtk-doc.
	Suboptimal, as it does not talk at all the mapping between
	gnome-vfs handles and scheme ports.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gnome-vfs.defs-type-ignores: Update for names
	that don't follow standard conventions.

	* gnome/overrides/gnome-vfs.defs: Update ignores for gnome-vfs
	2.16.

	* gnome/gw/gnome-vfs-spec.scm (global-declarations-cg): Include
	gnome-vfs-mime.h also.

2007-05-13  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gnome-vfs-spec.scm (initialize): Use uint64/int64
	rather than long-long in aliases.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-04  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gnome-vfs.defs (gnome_vfs_open)
	(gnome_vfs_open_uri, gnome_vfs_create, gnome_vfs_create_uri)
	(port->handle): Don't leave guile mode for functions that deal in
	SCM.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==

2006-11-05  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gnome-vfs-spec.scm: Use (gnome gw support g-wrap), the
	g-wrap compatibility wrapper.

2006-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gnome-vfs.defs ("gnome_vfs_mime_add_extension"):
	No more bonobo functions in new gnome-vfs.
