@@ -32,26 +32,6 @@
   (parameters
    '("GnomeVFSResult" "res")))
 
-(define-function gnome_vfs_directory_open
-  (c-name "_wrap_gnome_vfs_directory_open")
-  (overrides "gnome_vfs_directory_open")
-  (return-type "GnomeVFSDirectoryHandle*")
-  (parameters
-    '("const-gchar*" "text_uri")
-    '("GnomeVFSFileInfoOptions" "options")
-  )
-)
-
-(define-function gnome_vfs_directory_open_from_uri
-  (c-name "_wrap_gnome_vfs_directory_open_from_uri")
-  (overrides "gnome_vfs_directory_open_from_uri")
-  (return-type "GnomeVFSDirectoryHandle*")
-  (parameters
-    '("GnomeVFSURI*" "uri")
-    '("GnomeVFSFileInfoOptions" "options")
-  )
-)
-
 ;; open/create procedures return scheme ports :-)
 (define-function gnome_vfs_open
   (c-name "_wrap_gnome_vfs_open")
@@ -101,14 +81,6 @@
   )
 )
 
-(define-function port->handle
-  (c-name "scm_gnome_vfs_port_to_handle")
-  (overrides "port->handle")
-  (return-type "GnomeVFSHandle*")
-  (leave-guile-mode #f)
-  (parameters
-   '("SCM" "port")))
-
 ;; from here on out, just list-of specializations
 
 (define-method
@@ -130,129 +102,9 @@
     '("const-char*" "uri")
     '("const-char*" "mime_type")))
 
-(define-function gnome_vfs_async_get_file_info
-  (c-name "gnome_vfs_async_get_file_info")
-  (overrides "gnome_vfs_async_get_file_info")
-  (return-type "none")
-  (parameters
-    '("GnomeVFSAsyncHandle**" "handle_return")
-    '("GList*-of-GnomeVFSURI*" "uri_list")
-    '("GnomeVFSFileInfoOptions" "options")
-    '("int" "priority")
-    '("GnomeVFSAsyncGetFileInfoCallback" "callback")
-    '("gpointer" "callback_data")
-  )
-)
-
-(define-function gnome_vfs_async_xfer
-  (c-name "gnome_vfs_async_xfer")
-  (overrides "gnome_vfs_async_xfer")
-  (return-type "GnomeVFSResult")
-  (parameters
-    '("GnomeVFSAsyncHandle**" "handle_return")
-    '("GList*-of-GnomeVFSURI*" "source_uri_list")
-    '("GList*-of-GnomeVFSURI*" "target_uri_list")
-    '("GnomeVFSXferOptions" "xfer_options")
-    '("GnomeVFSXferErrorMode" "error_mode")
-    '("GnomeVFSXferOverwriteMode" "overwrite_mode")
-    '("int" "priority")
-    '("GnomeVFSAsyncXferProgressCallback" "progress_update_callback")
-    '("gpointer" "update_callback_data")
-    '("GnomeVFSXferProgressCallback" "progress_sync_callback")
-    '("gpointer" "sync_callback_data")
-  )
-)
-
-(define-function gnome_vfs_async_find_directory
-  (c-name "gnome_vfs_async_find_directory")
-  (overrides "gnome_vfs_async_find_directory")
-  (return-type "none")
-  (parameters
-    '("GnomeVFSAsyncHandle**" "handle_return")
-    '("GList*-of-GnomeVFSURI*" "near_uri_list")
-    '("GnomeVFSFindDirectoryKind" "kind")
-    '("gboolean" "create_if_needed")
-    '("gboolean" "find_if_needed")
-    '("guint" "permissions")
-    '("int" "priority")
-    '("GnomeVFSAsyncFindDirectoryCallback" "callback")
-    '("gpointer" "user_data")
-  )
-)
-
-(define-function gnome_vfs_directory_visit_files
-  (c-name "gnome_vfs_directory_visit_files")
-  (overrides "gnome_vfs_directory_visit_files")
-  (return-type "GnomeVFSResult")
-  (parameters
-    '("const-gchar*" "text_uri")
-    '("GList*-of-gchar*" "file_list")
-    '("GnomeVFSFileInfoOptions" "info_options")
-    '("GnomeVFSDirectoryVisitOptions" "visit_options")
-    '("GnomeVFSDirectoryVisitFunc" "callback")
-    '("gpointer" "data")
-  )
-)
-
-(define-function gnome_vfs_directory_visit_files_at_uri
-  (c-name "gnome_vfs_directory_visit_files_at_uri")
-  (overrides "gnome_vfs_directory_visit_files_at_uri")
-  (return-type "GnomeVFSResult")
-  (parameters
-    '("GnomeVFSURI*" "uri")
-    '("GList*-of-gchar*" "file_list")
-    '("GnomeVFSFileInfoOptions" "info_options")
-    '("GnomeVFSDirectoryVisitOptions" "visit_options")
-    '("GnomeVFSDirectoryVisitFunc" "callback")
-    '("gpointer" "data")
-  )
-)
-
 (ignore "gnome_vfs_directory_list_load")
-; (define-function gnome_vfs_directory_list_load
-;   (c-name "gnome_vfs_directory_list_load")
-;   (overrides "gnome_vfs_directory_list_load")
-;   (return-type "GnomeVFSResult")
-;   (parameters
-;     '("GList**" "list")
-;     '("const-gchar*" "text_uri")
-;     '("GnomeVFSFileInfoOptions" "options")
-;   )
-; )
-
 (ignore "gnome_vfs_dns_sd_list_browse_domains_sync")
-; (define-function gnome_vfs_dns_sd_list_browse_domains_sync
-;   (c-name "gnome_vfs_dns_sd_list_browse_domains_sync")
-;   (overrides "gnome_vfs_dns_sd_list_browse_domains_sync")
-;   (return-type "GnomeVFSResult")
-;   (parameters
-;     '("const-char*" "domain")
-;     '("int" "timeout_msec")
-;     '("GList**" "domains")
-;   )
-; )
 
-;; ghetto!
-(define-function gnome_vfs_get_file_mime_type_fast
-  (c-name "gnome_vfs_get_file_mime_type_fast")
-  (overrides "gnome_vfs_get_file_mime_type_fast")
-  (return-type "const-char*")
-  (parameters
-    '("const-char*" "path")
-    '("gpointer" "optional_stat_info" (null-ok) (default "NULL"))
-  )
-)
-
-(define-function gnome_vfs_get_file_mime_type
-  (c-name "gnome_vfs_get_file_mime_type")
-  (overrides "gnome_vfs_get_file_mime_type")
-  (return-type "const-char*")
-  (parameters
-    '("const-char*" "path")
-    '("gpointer" "optional_stat_info" (null-ok))
-    '("gboolean" "suffix_only")
-  )
-)
 
 (define-function gnome_vfs_get_default_browse_domains
   (c-name "gnome_vfs_get_default_browse_domains")
@@ -339,17 +191,6 @@
   )
 )
 
-(define-method launch_with_env
-  (of-object "GnomeVFSMimeApplication")
-  (c-name "gnome_vfs_mime_application_launch_with_env")
-  (overrides "gnome_vfs_mime_application_launch_with_env")
-  (return-type "GnomeVFSResult")
-  (parameters
-    '("GList*-of-GnomeVFSURI*" "uris")
-    '("char**" "envp")
-  )
-)
-
 (define-function gnome_vfs_uri_list_parse
   (c-name "gnome_vfs_uri_list_parse")
   (overrides "gnome_vfs_uri_list_parse")
@@ -373,33 +214,6 @@
   (return-type "GList*-of-GnomeVFSDrive*")
 )
 
-(define-function gnome_vfs_xfer_uri_list
-  (c-name "gnome_vfs_xfer_uri_list")
-  (overrides "gnome_vfs_xfer_uri_list")
-  (return-type "GnomeVFSResult")
-  (parameters
-    '("const-GList*-of-GnomeVFSURI*" "source_uri_list")
-    '("const-GList*-of-GnomeVFSURI*" "target_uri_list")
-    '("GnomeVFSXferOptions" "xfer_options")
-    '("GnomeVFSXferErrorMode" "error_mode")
-    '("GnomeVFSXferOverwriteMode" "overwrite_mode")
-    '("GnomeVFSXferProgressCallback" "progress_callback")
-    '("gpointer" "data")
-  )
-)
-(define-function gnome_vfs_xfer_delete_list
-  (c-name "gnome_vfs_xfer_delete_list")
-  (overrides "gnome_vfs_xfer_delete_list")
-  (return-type "GnomeVFSResult")
-  (parameters
-    '("const-GList*-of-GnomeVFSURI*" "source_uri_list")
-    '("GnomeVFSXferErrorMode" "error_mode")
-    '("GnomeVFSXferOptions" "xfer_options")
-    '("GnomeVFSXferProgressCallback" "progress_callback")
-    '("gpointer" "data")
-  )
-)
-
 (ignore-glob  "*_get_type"
               "_*"
               "*_ref"
@@ -418,19 +232,6 @@
 
               "gnome_vfs_application_registry_*"
               "*_sockaddr")
-
-;; need to wrap GnomeVFSAclKind, or file a bug..
-(define-function gnome_vfs_ace_new
-  (c-name "gnome_vfs_ace_new")
-  (overrides "gnome_vfs_ace_new")
-  (is-constructor-of "GnomeVfsAce")
-  (return-type "GnomeVFSACE*")
-  (parameters
-    '("gint" "kind")
-    '("const-char*" "id")
-    '("gpointer" "perms" (null-ok) (default "NULL"))
-  )
-)
 
 (ignore "gnome_vfs_ace_get_perms"
         "gnome_vfs_ace_set_perms")
@@ -499,6 +300,8 @@
   )
 )
 
+(ignore-glob "gnome_vfs*_file_info_*")
+
 ;; Deprecated
 (ignore "gnome_vfs_mime_add_extension"
         "gnome_vfs_mime_remove_extension"
@@ -524,6 +327,81 @@
         "gnome_vfs_preinit"
         "gnome_vfs_postinit"
         "gnome_vfs_async_create_uri_as_channel" ; prototyped, but not implemented!
+
+        "gnome_vfs_directory_open" ; GnomeVFSDirectoryHandle*
+        "gnome_vfs_directory_open_from_uri" ; GnomeVFSDirectoryHandle*
+        "gnome_vfs_async_get_file_info" ; GnomeVFSAsyncHandle**
+        "gnome_vfs_async_xfer" ; GnomeVFSAsyncHandle**
+        "gnome_vfs_async_find_directory" ; GnomeVFSAsyncHandle**
+        "gnome_vfs_directory_visit_files" ; GnomeVFSDirectoryVisitFunc
+        "gnome_vfs_directory_visit_files_at_uri" ; GnomeVFSDirectoryVisitFunc
+        "gnome_vfs_get_file_mime_type_fast" ; gpointer
+        "gnome_vfs_get_file_mime_type" ; gpointer
+        "gnome_vfs_mime_application_launch_with_env" ; char**
+        "gnome_vfs_xfer_uri_list" ; GnomeVFSXferProgressCallback
+        "gnome_vfs_xfer_delete_list" ; GnomeVFSXferProgressCallback
+        "gnome_vfs_ace_new" ; gpointer
+        "gnome_vfs_address_new_from_string" ; GnomeVFSAddress*
+        "gnome_vfs_address_new_from_ipv4" ; GnomeVFSAddress*
+        "gnome_vfs_address_get_family_type" ; GnomeVFSAddress*
+        "gnome_vfs_address_to_string" ; GnomeVFSAddress*
+        "gnome_vfs_address_get_ipv4" ; GnomeVFSAddress*
+        "gnome_vfs_address_equal" ; GnomeVFSAddress*
+        "gnome_vfs_address_match" ; GnomeVFSAddress*
+        "gnome_vfs_address_dup" ; GnomeVFSAddress*
+        "gnome_vfs_find_directory_result_dup" ; GnomeVFSFindDirectoryResult*
+        "gnome_vfs_cancellation_new" ; GnomeVFSCancellation*
+        "gnome_vfs_cancellation_destroy" ; GnomeVFSCancellation*
+        "gnome_vfs_cancellation_cancel" ; GnomeVFSCancellation*
+        "gnome_vfs_cancellation_check" ; GnomeVFSCancellation*
+        "gnome_vfs_cancellation_ack" ; GnomeVFSCancellation*
+        "gnome_vfs_cancellation_get_fd" ; GnomeVFSCancellation*
+        "gnome_vfs_context_new" ; GnomeVFSContext*
+        "gnome_vfs_context_get_cancellation" ; GnomeVFSCancellation*
+        "gnome_vfs_context_peek_current" ; GnomeVFSContext*
+        "gnome_vfs_directory_read_next" ; GnomeVFSDirectoryHandle*
+        "gnome_vfs_directory_close" ; GnomeVFSDirectoryHandle*
+        "gnome_vfs_directory_visit" ; GnomeVFSDirectoryVisitFunc
+        "gnome_vfs_directory_visit_uri" ; GnomeVFSDirectoryVisitFunc
+        "gnome_vfs_dns_sd_browse" ; GnomeVFSDNSSDBrowseHandle**
+        "gnome_vfs_dns_sd_stop_browse" ; GnomeVFSDNSSDBrowseHandle*
+        "gnome_vfs_dns_sd_resolve" ; GnomeVFSDNSSDResolveHandle**
+        "gnome_vfs_dns_sd_cancel_resolve" ; GnomeVFSDNSSDResolveHandle*
+        "gnome_vfs_dns_sd_browse_sync" ; GnomeVFSDNSSDService**
+        "gnome_vfs_dns_sd_resolve_sync" ; char**
+        "gnome_vfs_drive_mount" ; GnomeVFSVolumeOpCallback
+        "gnome_vfs_drive_unmount" ; GnomeVFSVolumeOpCallback
+        "gnome_vfs_drive_eject" ; GnomeVFSVolumeOpCallback
+        "gnome_vfs_find_directory" ; GnomeVFSURI**
+        "gnome_vfs_mime_monitor_get" ; GnomeVFSMIMEMonitor*
+        "gnome_vfs_get_mime_type_for_data" ; gconstpointer
+        "gnome_vfs_get_mime_type_for_name_and_data" ; gconstpointer
+        "gnome_vfs_module_callback_set_default" ; GnomeVFSModuleCallback
+        "gnome_vfs_module_callback_push" ; GnomeVFSModuleCallback
+        "gnome_vfs_close" ; GnomeVFSHandle*
+        "gnome_vfs_read" ; GnomeVFSHandle*
+        "gnome_vfs_write" ; GnomeVFSHandle*
+        "gnome_vfs_seek" ; GnomeVFSHandle*
+        "gnome_vfs_tell" ; GnomeVFSHandle*
+        "gnome_vfs_truncate_handle" ; GnomeVFSHandle*
+        "gnome_vfs_monitor_add" ; GnomeVFSMonitorHandle**
+        "gnome_vfs_monitor_cancel" ; GnomeVFSMonitorHandle*
+        "gnome_vfs_file_control" ; GnomeVFSHandle*
+        "gnome_vfs_forget_cache" ; GnomeVFSHandle*
+        "gnome_vfs_resolve" ; GnomeVFSResolveHandle**
+        "gnome_vfs_resolve_next_address" ; GnomeVFSResolveHandle*
+        "gnome_vfs_resolve_reset_to_beginning" ; GnomeVFSResolveHandle*
+        "gnome_vfs_uri_get_toplevel" ; GnomeVFSToplevelURI*
+        "gnome_vfs_uri_hequal" ; gconstpointer
+        "gnome_vfs_uri_hash" ; gconstpointer
+        "gnome_vfs_get_volume_free_space" ; GnomeVFSFileSize*
+        "gnome_vfs_open_fd" ; GnomeVFSHandle**
+        "gnome_vfs_read_entire_file" ; char**
+        "gnome_vfs_volume_unmount" ; GnomeVFSVolumeOpCallback
+        "gnome_vfs_volume_eject" ; GnomeVFSVolumeOpCallback
+        "gnome_vfs_xfer_uri" ; GnomeVFSXferProgressCallback
+
+        "gnome_vfs_url_show_with_env"
 
         ;; deprecated in 2.9
         "gnome_vfs_mime_id_in_application_list"
